v8.8.0/_sources/generated/pcdsdevices.sqr1.SQR1Axis.rst.txt
pcdsdevices.sqr1.SQR1Axis
=========================

.. currentmodule:: pcdsdevices.sqr1

.. autoclass:: SQR1Axis

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - done
          - :class:`~ophyd.signal.InternalSignal`
          - 
          - 
          - normal
          - Inherited from :class:`~ophyd.pv_positioner.PVPositionerIsClose`
    
        * - setpoint (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:TARGET:{_axis}``
          - 
          - normal
          - 
    
        * - readback (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:TARGET:{_axis}:RBV``
          - 
          - hinted
          - 
    
        * - actuate
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:MOV``
          - 
          - normal
          - 
    
        * - stop_signal
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:KILL``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: done_comparator
    .. automethod:: get
    .. automethod:: move
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate_value
    .. autoattribute:: atol
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: rtol
    .. autoattribute:: settle_time
    .. autoattribute:: stop_value
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    
    